--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
+    "mysql2": "^3.4.0",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
